# GalaxySimulator

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: InitialConditions.cpp  InitialConditions.hpp  OctTree.cpp  OctTree.hpp  Particle.hpp
src/physics/: Gravity.hpp
src/renderer/: Camera.cpp  Camera.hpp
